--- a/modelo/assets/css/style.css
+++ b/modelo/assets/css/style.css
@@ -1,3 +1,7 @@
+:root{
+    --primary-color: #ffb2f5; 
+}
+
 * {
     box-sizing: border-box;
     outline: none;
@@ -6,5 +10,5 @@
 body{
     margin: 0;
     padding: 0;
-    background: #ffb2f5;
+    background: var(--primary-color);
 }
