adding new codes

--- a/modelo/assets/css/style.css
+++ b/modelo/assets/css/style.css
@@ -12,3 +12,9 @@ body{
     padding: 0;
     background: var(--primary-color);
 }
+
+.container{
+    max-width: 640px;
+    margin: 0 auto;
+    padding: 20px;
+}
