adding new codes

--- a/modelo/assets/css/style.css
+++ b/modelo/assets/css/style.css
@@ -13,8 +13,9 @@ body{
     background: var(--primary-color);
 }
 
-.container{
+.container {
     max-width: 640px;
     margin: 20px auto;
     padding: 20px;
+    background-color: #fff;
 }
