--- a/modelo/assets/css/style.css
+++ b/modelo/assets/css/style.css
@@ -1,21 +1,24 @@
-:root{
-    --primary-color: #ffb2f5; 
+@import url("https://fonts.googleapis.com/css2?family=Mozilla+Headline:wght@200..700&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap");
+
+:root {
+  --primary-color: #ffb2f5;
 }
 
 * {
-    box-sizing: border-box;
-    outline: none;
+  box-sizing: border-box;
+  outline: none;
 }
 
-body{
-    margin: 0;
-    padding: 0;
-    background: var(--primary-color);
+body {
+  margin: 0;
+  padding: 0;
+  background: var(--primary-color);
+  font-family: 'Open sans', sans-serif;
 }
 
 .container {
-    max-width: 640px;
-    margin: 20px auto;
-    padding: 20px;
-    background-color: #fff;
+  max-width: 640px;
+  margin: 20px auto;
+  padding: 20px;
+  background-color: #fff;
 }
