--- a/modelo/assets/css/style.css
+++ b/modelo/assets/css/style.css
@@ -24,3 +24,8 @@ body {
   padding: 20px;
   background-color: #fff;
 }
+
+form input, form label, form button {
+  display: block;
+  width: 100%;
+}
