--- a/modelo/assets/css/style.css
+++ b/modelo/assets/css/style.css
@@ -25,7 +25,17 @@ body {
   background-color: #fff;
 }
 
-form input, form label, form button {
+form input {
   display: block;
   width: 100%;
 }
+
+form label {
+  display: block;
+  width: 100%;
+}
+form button {
+  display: block;
+  width: 100%;
+}
+
