adding new codes

--- a/modelo/assets/css/style.css
+++ b/modelo/assets/css/style.css
@@ -32,3 +32,8 @@ form input, form label, form button {
   margin-bottom: 10px;
 }
 
+form input {
+  font-size: 24px;
+  height: 50px;
+  padding: 0 20px;
+}
