adding new codes

--- a/modelo/assets/css/style.css
+++ b/modelo/assets/css/style.css
@@ -24,6 +24,8 @@ body {
   margin: 20px auto;
   padding: 20px;
   background-color: #fff;
+  border-radius: 35px;
+  box-shadow: 7px 4px 15px 6px rgba(0, 0, 0, 0.37);
  
 }
 
