--- a/modelo/assets/css/style.css
+++ b/modelo/assets/css/style.css
@@ -32,7 +32,8 @@ body {
 form input, form label, form button {
   display: block;
   width: 100%;
-  margin-bottom: 10px;
+  margin-bottom: 30px;
+  border-radius: 6px;
 }
 
 form input {
