--- a/aula26/style.css
+++ b/aula26/style.css
@@ -59,3 +59,8 @@ form button {
 form button:hover{
   background: var(--primary-color-darker)
 }
+
+.paragrafo-resultado {
+  background-color: rgb(109, 255, 182);
+  padding: 10px 20px;
+}
